[gd_scene load_steps=24 format=3 uid="uid://couhv4h8umrc7"]

[ext_resource type="Script" path="res://gdScripts/characterBody2D.gd" id="1_bhnif"]
[ext_resource type="Texture2D" uid="uid://cjcjxu7myhbq" path="res://assets/Morse Code the art/Protractor.png" id="2_vhsvq"]
[ext_resource type="Material" uid="uid://cc5oaf4uqttbv" path="res://assets/weaponTorpedo.tres" id="3_y6a5f"]
[ext_resource type="Texture2D" uid="uid://c44qeydba351h" path="res://assets/particle.png" id="4_20753"]
[ext_resource type="Texture2D" uid="uid://dmjk0ccufp35n" path="res://assets/paritcle2.png" id="5_3y4eu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8h28d"]
radius = 400.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kimm8"]

[sub_resource type="QuadMesh" id="QuadMesh_k6w4n"]

[sub_resource type="Curve" id="Curve_fhqiu"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0475, 1), 0.0, 0.0, 0, 0, Vector2(0.9, 1), 0.0, 0.0, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_k3ubg"]
curve = SubResource("Curve_fhqiu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_alnvb"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
direction = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_min = 9600.0
initial_velocity_max = 12800.0
gravity = Vector3(0, 0, 0)
damping_min = 0.02
damping_max = 0.05
scale_min = 1.5
scale_max = 2.0
scale_curve = SubResource("CurveTexture_k3ubg")
collision_mode = 1
collision_friction = 0.4
collision_bounce = 0.6
collision_use_scale = true

[sub_resource type="Curve" id="Curve_4vjkq"]
_data = [Vector2(0, 0.291162), 0.0, 0.0, 0, 0, Vector2(0.0154143, 0.949038), 0.0, -0.64861, 0, 0, Vector2(0.653179, 0.101212), -0.63689, 0.0, 0, 0, Vector2(1, 0.00855315), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_pg0lg"]
curve = SubResource("Curve_4vjkq")

[sub_resource type="Curve" id="Curve_c4isi"]
_data = [Vector2(0, 0.496154), 0.0, 0.0, 0, 0, Vector2(0.0127877, 0.922665), 0.0, 0.0, 0, 0, Vector2(0.988439, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_lsc3e"]
curve = SubResource("Curve_c4isi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ck7vr"]
particle_flag_disable_z = true
angle_min = -4.99999
angle_max = 5.00001
angular_velocity_min = -1.00002
angular_velocity_max = -1.00002
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.35
scale_curve = SubResource("CurveTexture_lsc3e")
alpha_curve = SubResource("CurveTexture_pg0lg")

[sub_resource type="Gradient" id="Gradient_770go"]
offsets = PackedFloat32Array(0, 0.627027)
colors = PackedColorArray(4, 3.372, 1.884, 1, 2, 0.843, 0.471, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3ko0t"]
gradient = SubResource("Gradient_770go")
use_hdr = true

[sub_resource type="Curve" id="Curve_egjc8"]
max_value = 100.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.788945, 0), 0.0, 0.0, 0, 0, Vector2(0.932161, 3.75), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_f00kc"]
curve = SubResource("Curve_egjc8")

[sub_resource type="Curve" id="Curve_m3c7b"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0251256, 1), 0.0, 0.0, 0, 0, Vector2(0.758794, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_x0avk"]
curve = SubResource("Curve_m3c7b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_egcnw"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
spread = 5.0
initial_velocity_min = 1200.0
initial_velocity_max = 6400.0
gravity = Vector3(0, 0, 0)
damping_min = 0.04
damping_max = 0.12
damping_curve = SubResource("CurveTexture_f00kc")
scale_min = 0.04
scale_max = 0.08
scale_curve = SubResource("CurveTexture_x0avk")
color_ramp = SubResource("GradientTexture1D_3ko0t")
turbulence_enabled = true
collision_mode = 2
collision_use_scale = true

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 7
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_bhnif")

[node name="explosionRadii" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosionRadii"]
shape = SubResource("CircleShape2D_8h28d")
debug_color = Color(0.576471, 0.101961, 0.113725, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_vhsvq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_kimm8")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
scale = Vector2(100, 100)
mesh = SubResource("QuadMesh_k6w4n")

[node name="deathDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="queueFreeDelay" type="Timer" parent="."]
wait_time = 10.0

[node name="explodeDelay" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="GPUParticles2D1" type="GPUParticles2D" parent="."]
self_modulate = Color(1, 0.825, 0.687, 1)
emitting = false
amount = 256
process_material = ExtResource("3_y6a5f")
texture = ExtResource("4_20753")
lifetime = 4.5
one_shot = true
explosiveness = 0.95
trail_lifetime = 0.1
trail_sections = 2
trail_section_subdivisions = 1

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
self_modulate = Color(4, 0.8, 0.6, 1)
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_alnvb")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
trail_enabled = true
trail_lifetime = 0.02

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
self_modulate = Color(10, 80, 80, 0.8)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_ck7vr")
texture = ExtResource("5_3y4eu")
lifetime = 8.0
one_shot = true

[node name="GPUParticles2D4" type="GPUParticles2D" parent="."]
emitting = false
amount = 768
process_material = SubResource("ParticleProcessMaterial_egcnw")
texture = ExtResource("4_20753")
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.05

[node name="GPUParticles2D5" type="GPUParticles2D" parent="."]
emitting = false
amount = 768
process_material = SubResource("ParticleProcessMaterial_egcnw")
texture = ExtResource("4_20753")
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.05

[node name="attackDamageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -185.0
offset_right = 107.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.247059, 0.882353, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="commandInput" type="LineEdit" parent="Control"]
self_modulate = Color(1, 0, 0, 1)
light_mask = 0
layout_mode = 0
offset_left = -240.0
offset_top = -234.295
offset_right = 360.0
offset_bottom = -165.295
scale = Vector2(0.8, 0.8)
theme_override_colors/font_color = Color(0.0691731, 0.0381473, 0.0816656, 1)
theme_override_font_sizes/font_size = 44
alignment = 1

[connection signal="timeout" from="deathDelay" to="." method="_on_death_delay_timeout"]
[connection signal="timeout" from="queueFreeDelay" to="." method="_on_queue_free_delay_timeout"]
[connection signal="timeout" from="explodeDelay" to="." method="_explodeDelayEnd"]
